--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "hbs": "^4.0.6"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.2"
   }
 }
